--- a/package.json
+++ b/package.json
@@ -21,11 +21,19 @@
   },
   "homepage": "https://github.com/Alsecode/frontend-project-lvl2#readme",
   "dependencies": {
+    "@jest/globals": "^28.1.3",
     "commander": "^9.4.0",
-    "eslint": "^8.21.0",
     "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
     "path": "^0.12.7",
     "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
+    "eslint": "^8.21.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "jest": "^28.1.3"
   }
 }
