--- a/.github/main.yml
+++ b/.github/main.yml
@@ -32,3 +32,12 @@ jobs:
     - name: run litner
       run: |
         make lint
+    - name: test & publish code coverage
+      # Publish code coverage on Code Climate
+      uses: paambaati/codeclimate-action@v3.0.0
+        # Add Code Climate secret key
+      env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+      with:
+          coverageCommand: make test-coverage
+          debug: true
