--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@jest/globals": "^28.1.3",
     "commander": "^9.4.0",
     "fs": "^0.0.1-security",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "path": "^0.12.7",
     "readline-sync": "^1.4.10"
