--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "gendiff": "bin/gendiff.js"
   },
   "scripts": {
-    "test": "npx -n --experimental-vm-modules jest"
+      "test": "node --experimental-vm-modules node_modules/jest/bin/jest"
   },
   "repository": {
     "type": "git",
