--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "gendiff": "bin/gendiff.js"
   },
   "scripts": {
-      "test": "node --experimental-vm-modules node_modules/jest/bin/jest"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest"
   },
   "repository": {
     "type": "git",
@@ -30,12 +30,11 @@
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0",
     "eslint": "^8.21.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^26.8.2",
     "jest": "^28.1.3"
-  }
+  },
+  "keywords": []
 }
