--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "gendiff": "bin/gendiff.js"
   },
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -30,11 +30,15 @@
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+    "babel-plugin-transform-import-meta": "^2.2.0",
     "eslint": "^8.21.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^26.8.2",
-    "jest": "^28.1.3"
+    "jest": "^28.1.3",
+    "jest-circus": "^28.1.0",
+    "jest-cli": "^28.1.3"
   },
   "keywords": []
 }
