--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "gendiff": "bin/gendiff.js"
   },
   "scripts": {
-    "test": "jest"
+    "test": "npx jest --bail"
   },
   "repository": {
     "type": "git",
@@ -31,6 +31,8 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+    "@babel/preset-env": "^7.18.10",
+    "babel-jest": "^28.1.3",
     "babel-plugin-transform-import-meta": "^2.2.0",
     "eslint": "^8.21.0",
     "eslint-config-airbnb-base": "^15.0.0",
