--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "gendiff": "bin/gendiff.js"
   },
   "scripts": {
-    "test": "npx jest --bail"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/Alsecode/frontend-project-lvl2#readme",
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.18.10",
+    "@babel/preset-typescript": "^7.18.6",
     "@jest/globals": "^28.1.3",
     "commander": "^9.4.0",
     "fs": "^0.0.1-security",
@@ -32,6 +34,7 @@
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.18.6",
     "@babel/preset-env": "^7.18.10",
+    "@types/jest": "^28.1.6",
     "babel-jest": "^28.1.3",
     "babel-plugin-transform-import-meta": "^2.2.0",
     "eslint": "^8.21.0",
@@ -39,8 +42,9 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^26.8.2",
     "jest": "^28.1.3",
-    "jest-circus": "^28.1.0",
-    "jest-cli": "^28.1.3"
-  },
-  "keywords": []
+    "jest-circus": "^28.1.3",
+    "jest-cli": "^28.1.3",
+    "ts-jest": "^28.0.7",
+    "typescript": "^4.7.4"
+  }
 }
