--- a/package.json
+++ b/package.json
@@ -32,19 +32,12 @@
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
-    "@babel/preset-env": "^7.18.10",
-    "@types/jest": "^28.1.6",
-    "babel-jest": "^28.1.3",
-    "babel-plugin-transform-import-meta": "^2.2.0",
     "eslint": "^8.21.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^26.8.2",
     "jest": "^28.1.3",
     "jest-circus": "^28.1.3",
-    "jest-cli": "^28.1.3",
-    "ts-jest": "^28.0.7",
-    "typescript": "^4.7.4"
+    "jest-cli": "^28.1.3"
   }
 }
