--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/Alsecode/frontend-project-lvl2/workflows/hexlet-check/badge.svg)](https://github.com/Alsecode/frontend-project-lvl2/actions)",
-  "main": ".eslintrc.js",
+  "main": ".eslintrc.cjs",
   "type": "module",
   "bin": {
     "gendiff": "bin/gendiff.js"
